Fixed units misaligned bug in the disk page

--- a/src/routes/setting/setting.less
+++ b/src/routes/setting/setting.less
@@ -1,6 +1,6 @@
 .setting {
   :global .ant-input-group-addon {
-    text-transform: capitalize
+    text-transform: capitalize;
   }
   .fieldset {
     border: 1px solid #f2f4f5;
